--- a/css/LoginPage.css
+++ b/css/LoginPage.css
@@ -1,168 +1,172 @@
-a
+a 
 {
-  text-decoration: none; 
-  margin-top: 7.5%;
-  letter-spacing: 2px;
+  display: block;
+  color: white; 
+  text-align: center;
+  text-decoration: none;
+}
 
-  font-size: 14px;
-  font-family: Roboto;
-  font-weight: bold;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0%;
-  margin-left: auto;
-  margin-right: auto;
+
+a:hover
+{
+  color: rgba(255,255,255,.5);
+}
+
+.error-text
+{
+  text-align: center;
+  color: red;
   
-  width: 40%;
-  height 10%;
-
 }
 
 .Box
 {
   width: 100%; 
-  height: 43%;
-  margin-top: 17%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  justify-content: center;
+  align-items: center;
+}
+
+h1
+{
+  color: white;
+  font-size: 55px;
+  margin-bottom: 100px
 }
 
 .registrationFont
 {
   margin-top: 7.5%;
-  letter-spacing: 2px;
+  letter-spacing: 8px;
 
-  font-size: 43px;
+  font-size: 45px;
   font-family: Roboto;
   font-weight: bold;
   color: white;
 
   display: flex;
   justify-content: center;
-
 }
 
-.group
+.group        
 { 
-  position: relative; 
-  margin-bottom: 45px; 
-
+  position:relative; 
+  margin-bottom:45px; 
 }
-input         
+input
 {
   background: #212F3C;
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 300px;
-  border: none;
-  border-bottom: 1px solid #757575;
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
 }
 
-input:focus     
-{ 
-  outline: none; 
+input:focus
+{
+  outline:none;
 }
 
-/* LABEL ======================================= */
 label
 {
-  color: white; 
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: 0.2s ease all; 
+  color:white; 
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all; 
 }
 
-/* active state */
 input:focus ~ label, input:valid ~ label
 {
-  top: -20px;
-  font-size: 14px;
-  color: white;
+  top:-20px;
+  font-size:14px;
+  color:white;
 }
 
-/* BOTTOM BARS ================================= */
-.bar  
+.bar
 { 
-  position: relative; 
-  display: block; 
-  width: 315px; 
+  position:relative; 
+  display:block; 
+  width:315px; 
 }
 
 .bar:before, .bar:after
 {
-  content: '';
-  height: 2px; 
-  width: 0;
-  bottom: 1px; 
-  position: absolute;
-  background: white; 
-  transition: 0.3s ease all; 
+  content:'';
+  height:2px; 
+  width:0;
+  bottom:1px; 
+  position:absolute;
+  background:white; 
+  transition:0.3s ease all; 
 }
-
 .bar:before 
 {
-  left: 50%;
+  left:50%;
 }
-
 .bar:after 
 {
-  right: 50%; 
+  right:50%; 
 }
 
-/* active state */
 input:focus ~ .bar:before, input:focus ~ .bar:after 
 {
-  width: 50%;
+  width:50%;
 }
 
-
-/* active state */
 input:focus ~ label, input:valid ~ label 
 {
-  top: -20px;
-  font-size: 14px;
-  color: white;
+  top:-20px;
+  font-size:14px;
+  color:white;
 }
 
 input, select, textarea
 {
-  color: white;
+  color:white;
 }
-
-/*Buttons */
 
 .buttonPosition
 {
-  display: flex;
+  display:flex;
   justify-content: center;
   align-items: center;
   margin-top: 2.5%;
   margin-bottom: 7.5%;
-	
 }
 
 .button
 {
   cursor: pointer;
-  border: 1px solid white;
+
+  font-weight: bold;
+  border:1px solid white;
   white-space: nowrap;
   background-color: #212F3C;
-  font-size: 110%;
+
+
+  font-size: 90%;
   color: white;
-  padding: 10px 30px;
-  margin-top: 60px;
+  width: 130px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button:hover
 {
-  background-color: rgba(255, 255, 255, .07);
+  background-color: rgba(255,255,255,.1);
 }
 
 .accountLink
@@ -177,19 +181,6 @@ input, select, textarea
 .accountLink:hover
 {
   color: #5D6D7E;
-}
-
-.wrapper
-{
-  width: 600px;
-  height: 600px;
-  position: absolute;
-  left: 0; right:0;
-  top: 0; bottom:0;
-  margin: auto;
-  max-width: 100%;
-  max-height: 100%;
-  overflow: auto;
 }
 
 .body
