Bring In Line with Final

--- a/css/style3.css
+++ b/css/style3.css
@@ -5,6 +5,12 @@
 	justify-content: center;
 }
 
+.errorMessage{
+	font-size: 20px;
+	color: red;
+	text-align: center;	
+}
+
 .registrationFont{
 	margin-top: 7.5%;
 	letter-spacing: 8px;
